# deepbullwhip

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  simulation.ipynb  sitemap.xml  vnv-badge.json  vnv-report.json  vnvspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
LEADERBOARD/: index.html
api/chain/: index.html
api/cost/: index.html
api/demand/: index.html
api/diagnostics/: index.html
api/policy/: index.html
api/sensitivity/: index.html
benchmarks/: run_leaderboard.py
data/: .gitignore  README.md
data/raw/australian_drug_sales/: download.sh
data/raw/m5/: download.sh
data/raw/store_item_demand/: download.sh
data/raw/uci_online_retail/: download.sh
deepbullwhip/: __init__.py  _optional.py  _types.py  registry.py  sensitivity.py
deepbullwhip/benchmark/: __init__.py  configs.py  report.py  runner.py
deepbullwhip/chain/: __init__.py  config.py  echelon.py  graph.py  network_sim.py  serial.py  vectorized.py
deepbullwhip/cost/: __init__.py  base.py  newsvendor.py  perishable.py
deepbullwhip/datasets/: __init__.py  beer_game.py  loader.py  m5.py  synthetic.py  wsts.py
deepbullwhip/datasets/data/: wsts_sample.csv
deepbullwhip/demand/: __init__.py  arma.py  base.py  beer_game.py  replay.py  semiconductor.py
deepbullwhip/diagnostics/: __init__.py  graphviz_viz.py  metrics.py  network.py  plots.py
deepbullwhip/ext/: __init__.py
deepbullwhip/forecast/: __init__.py  base.py  deepar.py  exponential_smoothing.py  moving_average.py  naive.py
deepbullwhip/forecast/learning/: __init__.py  lightgbm_quantile.py  lstm_multistep.py  nbeats.py  tft.py
deepbullwhip/metrics/: __init__.py  bounds.py  bullwhip.py  cost.py  damping_ratio.py  expected_shortfall.py  inventory.py  inventory_turnover.py  order_smoothing_ratio.py  peak_bwr.py  rfu.py
deepbullwhip/network/: __init__.py  analysis.py  convert.py
deepbullwhip/optimize/: __init__.py  inventory.py  network_design.py  policy_tuning.py
deepbullwhip/policy/: __init__.py  base.py  constant_order.py  order_up_to.py  proportional_out.py  smoothing_out.py
deepbullwhip/policy/learning/: __init__.py  dcl.py  dqn_beer_game.py  e2e_newsvendor.py  recurrent_ppo.py
deepbullwhip/render/: __init__.py  _graphviz.py  _matplotlib.py  _tikz.py  api.py  layout.py  theme.py
deepbullwhip/schema/: __init__.py  definition.py  io.py
docs/: LEADERBOARD.md  getting-started.md  index.md  leaderboard.html
docs/api/: chain.md  cost.md  demand.md  diagnostics.md  policy.md  sensitivity.md
docs/notebooks/: 01-cost.md  02-bullwhip.md  03-policies.md
docs/stylesheets/: extra.css
getting-started/: index.html
notebooks/: 01_supply_chain_cost.ipynb  02_bullwhip_effect.ipynb  03_custom_policies.ipynb  04_network_viz_tutorial.ipynb  05_pyomo_optimization.ipynb  06_benchmark_policies.ipynb  07_benchmark_forecasters.ipynb  08_benchmark_real_datasets.ipynb  add_your_own_model.ipynb  benchmark_forecasters.ipynb  benchmark_policies.ipynb  benchmark_real_datasets.ipynb  tutorial.ipynb
notebooks/01-cost/: index.html
notebooks/02-bullwhip/: index.html
notebooks/03-policies/: index.html
scripts/: exp_chen_validation.py  exp_corollary1.py  exp_cost_policy.py  exp_pareto.py  generate_caie_figures.py  generate_diagnostic_plots.py  generate_figures.py  generate_scalability.py  run_all_experiments.py  run_learning_leaderboard.py  visualize.py  vnv_assess.py
search/: search_index.json
tests/: conftest.py  test_benchmark.py  test_chain.py  test_cost.py  test_datasets.py  test_demand.py  test_diagnostics.py  test_extension_integration.py  test_forecast.py  test_forecast_deepar.py  test_graph.py  test_graphviz_viz.py  test_layout.py  test_metrics.py  test_metrics_module.py  test_network_analysis.py  test_network_convert.py  test_network_sim.py  test_new_demand.py  test_new_metrics_coverage.py  test_new_policies.py  test_optimize.py  test_perishable_cost.py  test_policy.py  test_registry.py  test_render.py  test_schema.py  test_sensitivity.py  test_theme.py  test_vectorized.py  test_vnvspec.py
