[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepbullwhip"
version = "0.1.0"
description = "Multi-tier supply chain bullwhip effect simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
